# bake-pyproject-version

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tester.py
bake_pyproject_version/: bake_pyproject_version.py
verbake/: baker.py
